# cloud-run-template

./: .dockerignore  .pre-commit-config.yaml  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: deploy.yml
docker/: Dockerfile  entrypoint.sh
infrastructure/: main.tf  terraform.tfvars  variables.tf
service/: main.py
tests/: test_main.py
